--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "tstart": "next dev --turbo"
   },
   "dependencies": {
     "@editorjs/code": "^2.8.0",
