--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-    
   },
   "dependencies": {
     "@editorjs/code": "^2.8.0",
@@ -34,10 +33,10 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.11",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@uploadthing/react": "^4.0.0",
-    "@upstash/redis": "^1.21.0",
+    "@upstash/redis": "^1.30.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
@@ -45,16 +44,16 @@
     "date-fns": "^2.30.0",
     "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "latest",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.221.0",
     "nanoid": "^4.0.2",
-    "next": "13.4.4",
+    "next": "latest",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "prisma": "^4.14.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.2",
     "react-textarea-autosize": "^8.4.1",
