--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@sentry/nextjs": "^7.105.0",
+    "@sentry/wizard": "^3.22.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.11",
@@ -50,6 +52,7 @@
     "nanoid": "^4.0.2",
     "next": "latest",
     "next-auth": "^4.22.1",
+    "npx": "^10.2.2",
     "postcss": "8.4.23",
     "prisma": "^4.14.1",
     "react": "latest",
